crates/test-files/fixtures/compile_errors/call_undefined_function_on_external_contract.fe
contract Foo {
    val: u8
}

contract Bar {
    pub fn test() {
        Foo(address(0)).doesnt_exist()
    }
}
